# nebius-course

./: .gitignore  CLAUDE.md
01-ai-model-to-ai-product/assignment_01/: assignment_01_task3.xlsx  assignment_01_task6.xlsx  assignment_1_evaluation.ipynb  experiment1.xlsx  experiment2.xlsx  experiment3.xlsx  experiment4.xlsx
01-ai-model-to-ai-product/assignment_02/: assignment2_evaluation.xlsx  assignment2_naive_generation.xlsx  assignment2_run_and_compare.xlsx  assignment_02.ipynb  correctness_scores.json  eval_runs.json  exp_correctness_e1_k10.json  exp_faithfulness_e1_k10.json  exp_runs_e1_k10.json  faithfulness_scores.json  rag_pipeline_guide.html  rag_pipeline_guide.md  yahel-cohen_gabriel-abramovich_assignment_02_rag.ipynb
01-ai-model-to-ai-product/assignment_03/: .gitignore  README.md  langgraph-python-zero-to-master.md  pyproject.toml
01-ai-model-to-ai-product/assignment_03/src/agent/: __init__.py  main.py  server.py  streamlit_app.py
01-ai-model-to-ai-product/assignment_03/src/agent/agents/: __init__.py  base_agent.py  router.py
01-ai-model-to-ai-product/assignment_03/src/agent/config/: __init__.py  settings.py
01-ai-model-to-ai-product/assignment_03/src/agent/graph/: __init__.py  main_graph.py  memory.py
01-ai-model-to-ai-product/assignment_03/src/agent/tools/: __init__.py  data_tools.py  dataset.py
01a/assignment_01/: .env  experiment4.xlsx  (+5 more)
02-LLM-Architectures/: logistic_regression_guide.html  logistic_regression_guide.md  pytorch_primer.md
02b/: LLM_Architectures,_hometask_1.ipynb  logistic_regression_guide.html  logistic_regression_guide.md
(+35 files in other folders)
